# lattice-benchmarks

./: .gitignore  Readme.md
Grid/: .clang-format  Benchmark_Grid.cpp  Benchmark_IO.cpp  Benchmark_IO.hpp  Benchmark_ITT.cpp  Benchmark_comms_host_device.cpp  Benchmark_dwf_fp32.cpp  Common.hpp  Makefile.am  Readme.md  bootstrap.sh  build-benchmark.sh  build-grid.sh  configure.ac
Grid/systems/tursa/: bootstrap-env.sh  cpu-mpi-wrapper.sh  env-cpu.sh  env-gpu.sh  env.sh  grid-config.json  grid-cpu.spack  grid-gpu.spack  spack-bootstrap.sh
Grid/systems/tursa/files/: env-cpu.sh  env-gpu.sh  gpu-mpi-wrapper.sh  ompi-gpu.sh  run.cpu.template.sh  run.gpu.16nodes.sh  run.gpu.1nodes.sh  run.gpu.32nodes.sh  run.gpu.template.sh
