ACLOCAL_AMFLAGS = -I .buildutils/m4
 
bin_PROGRAMS =                \
  Benchmark_comms_host_device \
  Benchmark_dwf_fp32          \
  Benchmark_ITT               \
  Benchmark_IO
  
Benchmark_comms_host_device_SOURCES = Benchmark_comms_host_device.cpp
Benchmark_dwf_fp32_SOURCES          = Benchmark_dwf_fp32.cpp
Benchmark_ITT_SOURCES               = Benchmark_ITT.cpp
Benchmark_IO_SOURCES                = Benchmark_IO.cpp
