ACLOCAL_AMFLAGS = -I .buildutils/m4
 
bin_PROGRAMS =                \
  Benchmark_comms_host_device \
  Benchmark_dwf_fp32          \
  Benchmark_Grid              \
  Benchmark_IO
  
Benchmark_comms_host_device_SOURCES = Benchmark_comms_host_device.cpp
Benchmark_dwf_fp32_SOURCES          = Benchmark_dwf_fp32.cpp
Benchmark_Grid_SOURCES              = Benchmark_Grid.cpp
Benchmark_IO_SOURCES                = Benchmark_IO.cpp
